--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">heltho</string>
+    <string name="facebook_app_id">233723523802553</string>
+    <string name="fb_login_protocol_scheme">fb233723523802553</string>
+    <string name="title_activity_user_dashboard">userDashboard</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+
 </resources>
