--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="share_msg">Hey signUp for Heltho and have a healthy lifestyle</string>
     <string name="action_settings">Settings</string>
 
 </resources>
